finished picadillo html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href="./recipies/picadillo.html">Picadillo</a>
-    <a href="./recipies/alfredo.html">Chicken Alfredo</a>
-    <a href="./recipies/mofongo.html">Mofongo</a>
+    <a href="./picadillo.html">Picadillo</a>
+    <a href="./alfredo.html">Chicken Alfredo</a>
+    <a href="./mofongo.html">Mofongo</a>
 </body>
 </html>
