--- a/alfredo.html
+++ b/alfredo.html
@@ -9,10 +9,14 @@
     <h1>Chicken Alfredo</h1>
     <img src="" alt="">
     <h3>Description</h3>
-        <p>This is a classic Cuban picadillo recipe for ground beef that is typically eaten over white rice. It can also be used as a filling for tacos or empanadas. It's delicious with fried ripe plantains.</p>
+        <p>This chicken Alfredo recipe with jar sauce is a quick and easy dinner for those hectic nights. For extra flavor, cook the chicken with lemon pepper and seasoning salt.</p>
     <h3>Ingredients</h3>
         <ul></ul>
+        <ul></ul>
+        <ul></ul>
     <h3>Steps</h3>
-        <li></li>
-</body>
+        <ol>Fill a large pot with lightly salted water and bring to a rolling boil. Cook fettuccine at a boil until tender yet firm to the bite, about 8 minutes. Drain well.</ol>
+        <ol>While the pasta is cooking, place cubed cooked chicken, Alfredo sauce, frozen vegetables, mushrooms, and milk in a large saucepan over medium-low heat. Cook and stir until chicken is heated through and vegetables are tender.</ol>
+        <ol>Serve warm Alfredo and chicken sauce over cooked noodles.</ol>
+    </body>
 </html>
