--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <li>
-    <a href="./picadillo.html">Picadillo</a>
-    <a href="./alfredo.html">Chicken Alfredo</a>
-    <a href="./mofongo.html">Mofongo</a>
-    </li>
+    <ul>
+    <li><a href="./picadillo.html">Picadillo</a></li>
+    <li><a href="./alfredo.html">Chicken Alfredo</a></li>
+    <li><a href="./mofongo.html">Mofongo</a></li>
+    </ul>
 </body>
 </html>
