--- a/alfredo.html
+++ b/alfredo.html
@@ -13,16 +13,20 @@
     <h3>Description</h3>
         <p>This chicken Alfredo recipe with jar sauce is a quick and easy dinner for those hectic nights. For extra flavor, cook the chicken with lemon pepper and seasoning salt.</p>
     <h3>Ingredients</h3>
-        <ul>1 pound uncooked fettuccine or linguine</ul>
-        <ul>2 boneless chicken breast halves, cooked and cubed</ul>
-        <ul>1 (16 ounce) jar Alfredo-style pasta sauce</ul>
-        <ul>1 (10 ounce) package frozen mixed vegetables</ul>
-        <ul>1 (4.5 ounce) can sliced mushrooms</ul>
-        <ul>⅓ cup milk</ul>
+    <ul>  
+        <li>1 pound uncooked fettuccine or linguine</li>
+        <li>2 boneless chicken breast halves, cooked and cubed</li>
+        <li>1 (16 ounce) jar Alfredo-style pasta sauce</li>
+        <li>1 (10 ounce) package frozen mixed vegetables</li>
+        <li>1 (4.5 ounce) can sliced mushrooms</li>
+        <li>⅓ cup milk</li>
+    </ul>  
     <h3>Steps</h3>
-        <ol>Fill a large pot with lightly salted water and bring to a rolling boil. Cook fettuccine at a boil until tender yet firm to the bite, about 8 minutes. Drain well.</ol>
-        <ol>While the pasta is cooking, place cubed cooked chicken, Alfredo sauce, frozen vegetables, mushrooms, and milk in a large saucepan over medium-low heat. Cook and stir until chicken is heated through and vegetables are tender.</ol>
-        <ol>Serve warm Alfredo and chicken sauce over cooked noodles.</ol>
+    <ol>    
+        <li>Fill a large pot with lightly salted water and bring to a rolling boil. Cook fettuccine at a boil until tender yet firm to the bite, about 8 minutes. Drain well.</li>
+        <li>While the pasta is cooking, place cubed cooked chicken, Alfredo sauce, frozen vegetables, mushrooms, and milk in a large saucepan over medium-low heat. Cook and stir until chicken is heated through and vegetables are tender.</li>
+        <li>Serve warm Alfredo and chicken sauce over cooked noodles.</li>
+    </ol>
     <a href="index.html">Home</a>
     </body>
 </html>
