--- a/mofongo.html
+++ b/mofongo.html
@@ -13,12 +13,14 @@
     <h3>Description</h3>
         <p>Mofongo might not look like much, but it sure is tasty. Mashed green plantains with garlic, olive oil and pork rinds (or bacon). Mofongo goes well with chicken or fish broth and can be stuffed with garlic shrimp, carne frita or octopus salad. It can also be formed into small balls and dropped in soups or served directly in a mortar. This is one of my many guilty pleasures!</p>
     <h3>Ingredients</h3>
-        <ul>3 cups canola oil for frying</ul>
-        <ul>3 cloves garlic, or to taste</ul>
-        <ul>3 tablespoons olive oil</ul>
-        <ul>⅛ cup crushed fried pork skins</ul>
-        <ul>2 green plantains, peeled and sliced into 1/2-inch rounds</ul>
-        <ul>salt for taste</ul>
+    <ul>    
+        <li>3 cups canola oil for frying</li>
+        <li>3 cloves garlic, or to taste</li>
+        <li>3 tablespoons olive oil</li>
+        <li>⅛ cup crushed fried pork skins</li>
+        <li>2 green plantains, peeled and sliced into 1/2-inch rounds</li>
+        <li>salt for taste</li>
+    </ul>
     <h3>Steps</h3>
         <ol>Heat canola oil in a deep-fryer or large saucepan to 350 degrees F (175 degrees C). Mash the garlic with the olive oil in a mortar and pestle. Combine garlic mixture with the pork rinds in a large bowl; set aside.</ol>
         <ol>Fry the plantain chunks until golden and crispy, but not brown, about 15 minutes. Transfer the fried plantains into the bowl with the garlic mixture. Toss to coat. Mash the coated plantains with the mortar and pestle until smooth. Season with salt. Roll the plantain mixture into two large balls or several small balls before serving.</ol>
