--- a/picadillo.html
+++ b/picadillo.html
@@ -13,24 +13,28 @@
     <h3>Description</h3>
         <p>This is a classic Cuban picadillo recipe for ground beef that is typically eaten over white rice. It can also be used as a filling for tacos or empanadas. It's delicious with fried ripe plantains.</p>
     <h3>Ingredients</h3>
-        <ul>1 tablespoon olive oil</ul>
-        <ul>1 small onion, chopped</ul>
-        <ul>½ green bell pepper, chopped</ul>
-        <ul>1 clove garlic, minced, or more to taste</ul>
-        <ul>1 pound lean ground beef</ul>
-        <ul>1 (8 ounce) can tomato sauce</ul>
-        <ul>6 large pitted green olives, quartered</ul>
-        <ul>½ cup raisins</ul>
-        <ul>1 tablespoon capers (Optional)</ul>
-        <ul>2 (1.41 ounce) packages sazon seasoning (such as Goya®)</ul>
-        <ul>1 tablespoon ground cumin</ul>
-        <ul>1 teaspoon white sugar</ul>
-        <ul>salt to taste</ul>
+    <ul>
+        <li>1 tablespoon olive oil</li>
+        <li>1 small onion, chopped</li>
+        <li>½ green bell pepper, chopped</li>
+        <li>1 clove garlic, minced, or more to taste</li>
+        <li>1 pound lean ground beef</li>
+        <li>1 (8 ounce) can tomato sauce</li>
+        <li>6 large pitted green olives, quartered</li>
+        <li>½ cup raisins</li>
+        <li>1 tablespoon capers (Optional)</li>
+        <li>2 (1.41 ounce) packages sazon seasoning (such as Goya®)</li>
+        <li>1 tablespoon ground cumin</li>
+        <li>1 teaspoon white sugar</li>
+        <li>salt to taste</li>
+    </ul>
     <h3>Steps</h3>
-        <ol>Gather all ingredients.</ol>
-        <ol>Heat olive oil in a skillet over medium heat; cook and stir onion, bell pepper, and garlic, onion in the hot oil until softened, 5 to 7 minutes.</ol>
-        <ol>Add ground beef into the skillet; cook and stir until crumbly and completely browned, 7 to 10 minutes.</ol>
-        <ol>Stir tomato sauce, olives, raisins, capers, cumin, sazon seasoning, sugar, and salt into the ground beef mixture. Cover the skillet, reduce heat to low, and cook until the mixture is heated through, 5 to 10 minutes.</ol>
-    <a href="./index.html">Home</a>
+        <ol> 
+        <li>Gather all ingredients.</li>
+        <li>Heat olive oil in a skillet over medium heat; cook and stir onion, bell pepper, and garlic, onion in the hot oil until softened, 5 to 7 minutes.</li>
+        <li>Add ground beef into the skillet; cook and stir until crumbly and completely browned, 7 to 10 minutes.</li>
+        <li>Stir tomato sauce, olives, raisins, capers, cumin, sazon seasoning, sugar, and salt into the ground beef mixture. Cover the skillet, reduce heat to low, and cook until the mixture is heated through, 5 to 10 minutes.</li>
+        </ol>
+        <a href="./index.html">Home</a>
 </body>
 </html>
